parser issues fixed

--- a/loader.ipynb
+++ b/loader.ipynb
@@ -88,11 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 315,
    "id": "6db187f5-3273-4e83-9543-1eaf54b56409",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "def parser(readme_file):\n",
     "    \"\"\"\n",
     "    \n",
@@ -111,13 +113,14 @@
     "                        break\n",
     "                    else:\n",
     "                        target = [value.split('.') for value in [value for value in content[i+indx].split(',') if value != '\\n']]\n",
-    "                        indx = [target_value[0] for target_value in target]\n",
-    "                        values = [target_value[1] for target_value in target]\n",
-    "                        keys.append([target_value[0] for target_value in target])\n",
-    "                        appliances.append([target_value[1] for target_value in target])\n",
-    "                ls.update({house: {'appliances':  [item.split('\\n')[0] for sublist in appliances for item in sublist], 'keys': [item for sublist in keys for item in sublist]}})\n",
+    "                        for t in target:\n",
+    "                            if len(t) > 2: ##### one comma missing caused issue\n",
+    "                                appliances.append(t[1])\n",
+    "                                appliances.append(t[2])\n",
+    "                            else:\n",
+    "                                appliances.append(t[1])\n",
+    "                ls.update({house: [item.split('\\n')[0] for item in appliances]})\n",
     "        return ls\n",
-    "        \n",
     "    \n",
     "    except Exception as e:\n",
     "        display(\"Error occured in parser method due to \", e)"
@@ -125,7 +128,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 316,
+   "id": "fd768483-abd0-42e5-a488-045e0f505f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loading the readme files specified: data/refit/REFIT_Readme.txt'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "keys_of_appliances = parser(general_config['README_FILE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "ba24ef86-5d43-4d4a-ae4b-32df76341174",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aggregate',\n",
+       " 'Fridge-Freezer',\n",
+       " 'Washing Machine',\n",
+       " 'Dishwasher',\n",
+       " 'Television',\n",
+       " 'Microwave',\n",
+       " 'Toaster',\n",
+       " 'Hi-Fi',\n",
+       " 'Kettle',\n",
+       " 'Oven Extractor Fan']"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys_of_appliances['2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
    "id": "4629c85d-1fe0-48af-9c87-d5a727f5bd3c",
    "metadata": {},
    "outputs": [
@@ -154,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 319,
    "id": "908cd34c-a862-4fcb-8335-1b7100fb8fef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Loading specified houses: [1, 3]'"
+       "'Loading specified houses: [3, 5, 7, 8]'"
       ]
      },
      "metadata": {},
@@ -171,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 71.9 ms\n"
+      "Wall time: 77.3 ms\n"
      ]
     }
    ],
@@ -182,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 320,
    "id": "1e78de71-a51b-4f81-af82-096829d0689a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{1: Dask DataFrame Structure:\n",
+       "[{3: Dask DataFrame Structure:\n",
        "                   Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
        "  npartitions=7                                                                                                                            \n",
        "                 object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
@@ -198,7 +251,7 @@
        "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
        "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
        "  Dask Name: read-csv, 7 tasks},\n",
-       " {3: Dask DataFrame Structure:\n",
+       " {5: Dask DataFrame Structure:\n",
        "                   Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
        "  npartitions=7                                                                                                                            \n",
        "                 object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
@@ -206,10 +259,28 @@
        "  ...               ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
        "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
        "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-       "  Dask Name: read-csv, 7 tasks}]"
+       "  Dask Name: read-csv, 7 tasks},\n",
+       " {7: Dask DataFrame Structure:\n",
+       "                   Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
+       "  npartitions=6                                                                                                                            \n",
+       "                 object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "  ...               ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "  Dask Name: read-csv, 6 tasks},\n",
+       " {8: Dask DataFrame Structure:\n",
+       "                   Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
+       "  npartitions=6                                                                                                                            \n",
+       "                 object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "  ...               ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "                    ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
+       "  Dask Name: read-csv, 6 tasks}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,59 +291,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e9130db5-f180-4468-bae4-a31c5ea18d48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "6ba1dc5a-1ed1-4e2f-9463-585a254c8be2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Loading the readme files specified: data/refit/REFIT_Readme.txt'"
+       "['Aggregate',\n",
+       " 'Toaster',\n",
+       " 'Fridge-Freezer',\n",
+       " 'Freezer',\n",
+       " 'Tumble Dryer',\n",
+       " 'Dishwasher',\n",
+       " 'Washing Machine',\n",
+       " 'Television',\n",
+       " 'Microwave',\n",
+       " 'Kettle']"
       ]
      },
+     "execution_count": 321,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "keys_of_appliances = parser(general_config['README_FILE'])"
+    "keys_of_appliances['3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0561167c-3bac-4ff3-935e-48e42791c431",
+   "execution_count": 322,
+   "id": "2cd2b345-d5ff-4a22-913b-23711aa6b511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'Kettle'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "27ddcc9b-22e5-4d4a-b778-e832a0eda95f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "Dask DataFrame Structure:\n",
-      "                 Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
-      "npartitions=7                                                                                                                            \n",
-      "               object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "...               ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "Dask Name: read-csv, 7 tasks\n",
-      "{'appliances': ['Aggregate', 'Fridge', 'Chest Freezer', 'Upright Freezer', 'Tumble Dryer', 'Washing Machine', 'Dishwasher', 'Computer Site', 'Television Site', 'Electric Heater'], 'keys': ['0', ' 1', ' 2', ' 3', ' 4', '5', ' 6', ' 7', ' 8', ' 9']}\n",
-      "3\n",
-      "Dask DataFrame Structure:\n",
-      "                 Time   Unix Aggregate Appliance1 Appliance2 Appliance3 Appliance4 Appliance5 Appliance6 Appliance7 Appliance8 Appliance9\n",
-      "npartitions=7                                                                                                                            \n",
-      "               object  int64     int64      int64      int64      int64      int64      int64      int64      int64      int64      int64\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "...               ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "                  ...    ...       ...        ...        ...        ...        ...        ...        ...        ...        ...        ...\n",
-      "Dask Name: read-csv, 7 tasks\n",
-      "{'appliances': ['Aggregate', 'Toaster', 'Fridge-Freezer', 'Freezer', 'Tumble Dryer', 'Dishwasher', 'Washing Machine', 'Television', 'Microwave', 'Kettle'], 'keys': ['0', ' 1', ' 2', ' 3', ' 4', '5', ' 6', ' 7', ' 8', ' 9']}\n"
+      "-1\n",
+      "Kettle\n",
+      "8\n",
+      "Kettle\n",
+      "9\n",
+      "Kettle\n",
+      "9\n",
+      "Kettle\n",
+      "8\n",
+      "Kettle\n",
+      "7\n",
+      "Kettle\n",
+      "9\n",
+      "Kettle\n",
+      "9\n",
+      "Kettle\n",
+      "7\n",
+      "-1\n"
      ]
     }
    ],
+   "source": [
+    "for hh in [1,2,3,4,5,6,7,8,9,10]:\n",
+    "    if target not in keys_of_appliances[str(hh)]:\n",
+    "        print(-1)\n",
+    "    else:\n",
+    "        for idx, value in enumerate(keys_of_appliances[str(hh)]):\n",
+    "            if value == target:\n",
+    "                print(value)\n",
+    "                print(idx)\n",
+    "\n",
+    "#     for idx, value in enumerate(keys_of_appliances[str(2)]):\n",
+    "#     if value == 'Kettle':\n",
+    "#         keys_mapping.append(idx)\n",
+    "#     else:\n",
+    "#     keys_mapping.append(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "fc7d52b3-8604-4aa1-8a93-371dc5a37a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-207-31fd4b60fe55>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mkeys_of_appliances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'appliances'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "keys_of_appliances[str(5)]['appliances']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1eb253c-3a5e-4d88-9f2a-f99625009aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"Kettle\" in keys_of_appliances[str(2)]['appliances']:\n",
+    "    print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b126dba5-a552-456b-9fdc-f5c041f91960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for hh in [1,2,3,4,5,6,7,8,9,10]:\n",
+    "    print(f\"House {hh}\")\n",
+    "    if 'Kettle' in keys_of_appliances[str(hh)]['appliances'] :\n",
+    "        print(keys_of_appliances[str(hh)]['appliances'].index('Kettle'))\n",
+    "    else:\n",
+    "        print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d9d03b8-01cd-4255-b424-899b38b369a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for hh in [1,2,3,4,5,6,7,8,9,10]:\n",
+    "    keys_mapping = [idx if value=='Kettle' else -1 for idx, value in enumerate(keys_of_appliances[str(hh)]['appliances'])]\n",
+    "keys_mapping\n",
+    "\n",
+    "fruits = [\"idx\" if value=='Kettle' else \"None\" for idx, value in enumerate(keys_of_appliances[str(hh)]['appliances']) ]\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0561167c-3bac-4ff3-935e-48e42791c431",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# mapping_keys = [key for house_dict in collective_dataset for key in house_dict.keys()]\n",
     "# mapping_keys\n",
@@ -283,6 +464,8 @@
     "        print(key)\n",
     "        print(house_dict[key])\n",
     "        print(keys_of_appliances[str(key)])\n",
+    "        for i in range(1,10):\n",
+    "            house_dict[key].rename({f'Appliance{i}': keys_of_appliances[str(house)]['appliances'][i]}, axis=1, inplace=True)\n",
     "#     mapping_key = house_dict.keys()\n",
     "\n",
     "# mapping_keys"
