modularization in progress

--- a/loader.ipynb
+++ b/loader.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "id": "b290f215-eb7e-471d-9c3d-025f2fdfc445",
    "metadata": {},
    "outputs": [],
@@ -240,8 +240,8 @@
     "                ls.update({house_number: data})\n",
     "    elif type(houses) == list and len(houses)!=0:\n",
     "        for house_number in houses:\n",
-    "            print(house_number)\n",
     "            if target_appliance in collective_dataset[house_number].columns:\n",
+    "                display(f'Fetching data for House {house_number}')\n",
     "                data = collective_dataset[house_number][['Time', target_appliance]].compute()\n",
     "                ls.update({house_number: data})\n",
     "    else:\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 132,
    "id": "43b5a2a0-95f6-47d5-8b39-2addae45fb41",
    "metadata": {},
    "outputs": [
@@ -273,47 +273,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 133,
    "id": "46fe4769-3b3a-4967-9dfb-6c122c869d54",
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "argument 'houses' should not be an empty list or by default set should be set to 'all_houses'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-128-a5c78072446a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mKETTLE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_appliance_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Kettle\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhouses\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-126-3c5cea742aed>\u001b[0m in \u001b[0;36mget_appliance_data\u001b[1;34m(target_appliance, houses)\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[0mls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mhouse_number\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"argument 'houses' should not be an empty list or by default set should be set to 'all_houses'\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: argument 'houses' should not be an empty list or by default set should be set to 'all_houses'"
-     ]
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 2'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 3'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 4'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 5'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 6'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 7'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching data for House 8'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "KETTLE = get_appliance_data(\"Kettle\", houses=[])"
+    "%%time\n",
+    "KETTLE = get_appliance_data(\"Kettle\", houses=[1,2,3,4,5,6,7,8])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 135,
    "id": "5794481a-60e5-456f-a437-03bf63652d94",
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "2",
+     "evalue": "1",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-121-bc1365ae3ffd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mKETTLE\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 2"
+      "\u001b[1;32m<ipython-input-135-068cea0bfce8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mKETTLE\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
      ]
     }
    ],
    "source": [
-    "KETTLE[2]"
+    "KETTLE[1]"
    ]
   },
   {
@@ -387,415 +439,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67eaabec-38f1-4f11-ae45-ae552000944a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "list_of_house_numbers, list_of_appliance_data = [], []\n",
-    "for house_data in collective_dataset:\n",
-    "    for key in house_data.keys():\n",
-    "        print(key)\n",
-    "        if target_appliance in keys_of_appliances[str(key)]:\n",
-    "            data = house_data[key][['Time',target_appliance]]\n",
-    "            print(data)\n",
-    "            list_of_house_numbers.append(key)\n",
-    "            list_of_appliance_data.append(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68b8356b-a859-4fd4-9531-e307357c307a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for target_appliance in dataset_config['APPLIANCES']:\n",
-    "    print(target_appliance)\n",
-    "    for house_data in collective_dataset:\n",
-    "        for key in house_data.keys():\n",
-    "            print(house_data[key].loc[target_appliance])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27ddcc9b-22e5-4d4a-b778-e832a0eda95f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "house_numbers = []\n",
-    "house_data = []\n",
-    "for target_appliance in dataset_config['APPLIANCES']:\n",
-    "    print(target_appliance)\n",
-    "    for house_number in dataset_config['HOUSES']:\n",
-    "        print(house_number)\n",
-    "        if target_appliance not in keys_of_appliances[str(house_number)]:\n",
-    "            print(-1)\n",
-    "        else:\n",
-    "            for idx, value in enumerate(keys_of_appliances[str(house_number)]):\n",
-    "                if value == target_appliance:\n",
-    "                    set_appliance = f\"Appliance{idx}\"\n",
-    "                    print(set_appliance)\n",
-    "                    itere=house_number-1\n",
-    "                    print(collective_dataset[itere][house_number][f\"Appliance{idx}\"])\n",
-    "                    \n",
-    "                    house_numbers.append(house_number)\n",
-    "                    house_data.append(collective_dataset[house_number-1][house_number][f\"Appliance{idx}\"])\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc7d52b3-8604-4aa1-8a93-371dc5a37a8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "keys_of_appliances[str(5)]['appliances']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1eb253c-3a5e-4d88-9f2a-f99625009aea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if \"Kettle\" in keys_of_appliances[str(2)]['appliances']:\n",
-    "    print(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b126dba5-a552-456b-9fdc-f5c041f91960",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for hh in [1,2,3,4,5,6,7,8,9,10]:\n",
-    "    print(f\"House {hh}\")\n",
-    "    if 'Kettle' in keys_of_appliances[str(hh)]['appliances'] :\n",
-    "        print(keys_of_appliances[str(hh)]['appliances'].index('Kettle'))\n",
-    "    else:\n",
-    "        print(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d9d03b8-01cd-4255-b424-899b38b369a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for hh in [1,2,3,4,5,6,7,8,9,10]:\n",
-    "    keys_mapping = [idx if value=='Kettle' else -1 for idx, value in enumerate(keys_of_appliances[str(hh)]['appliances'])]\n",
-    "keys_mapping\n",
-    "\n",
-    "fruits = [\"idx\" if value=='Kettle' else \"None\" for idx, value in enumerate(keys_of_appliances[str(hh)]['appliances']) ]\n",
-    "print(fruits)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0561167c-3bac-4ff3-935e-48e42791c431",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mapping_keys = [key for house_dict in collective_dataset for key in house_dict.keys()]\n",
-    "# mapping_keys\n",
-    "mapping_keys = []\n",
-    "\n",
-    "for house_dict in collective_dataset:\n",
-    "    for key in house_dict.keys():\n",
-    "        print(key)\n",
-    "        print(house_dict[key])\n",
-    "        print(keys_of_appliances[str(key)])\n",
-    "        for i in range(1,10):\n",
-    "            house_dict[key].rename({f'Appliance{i}': keys_of_appliances[str(house)]['appliances'][i]}, axis=1, inplace=True)\n",
-    "#     mapping_key = house_dict.keys()\n",
-    "\n",
-    "# mapping_keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7defdebc-2ac3-44e7-9172-625be8fde922",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "keys_of_appliances['3']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf6f8a7d-010b-4bcf-b293-3e9166921eb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "for house in range(0, len(collective_dataset)):\n",
-    "    print(house)\n",
-    "#     print(d)\n",
-    "    for i in range(1, len(keys_of_appliances[str(house+1)]['appliances'])):\n",
-    "        collective_dataset[house].rename({f'Appliance{i}': nested_dict[str(house+1)]['appliances'][i]}, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4036d284-1556-44c1-963a-aa737e700598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for house_dict in collective_dataset:\n",
-    "    print(type(house_dict))\n",
-    "#     print(house_dict)\n",
-    "#     collective_dataset\n",
-    "    for key in house_dict.keys:\n",
-    "        print(key)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d224a9d-b8a3-4fca-a74d-ef458f0e3c26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "d1 = collective_dataset[0].compute().set_index('Time')\n",
-    "d3 = collective_dataset[1].compute().set_index('Time')\n",
-    "d4 = collective_dataset[2].compute().set_index('Time')\n",
-    "\n",
-    "# d1 = collective_dataset[0].compute()\n",
-    "# d3 = collective_dataset[1].compute()\n",
-    "# d4 = collective_dataset[2].compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e238689-86d8-4dfd-8ade-fb313623823a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collective_dataset[0].keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df901e34-17c9-49b1-bd14-a36b45292ac7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "ob._load_file(csv_file_path=dataset_config['REFIT_DATA_PATH'], index_column_name='Time')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16cdc76d-095f-4eb1-b06e-ec392afef112",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "files = glob.glob(dataset_config['REFIT_DATA_FOLDER'] + '*' + dataset_config['REFIT_DATA_TYPE'])\n",
-    "print(files)\n",
-    "# data = [pd.read_csv(file, index_col='Time') for file in files]\n",
-    "# data\n",
-    "files[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fa02d5c-b66c-4bff-8b71-8acd7c36a244",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "341a8202-f799-456d-947c-9d2448005b59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c5c8de9-fc7a-4b10-a043-27d3a7b812be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "data = pd.read_csv(files[0], index_col='Time')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07795f84-1509-46ee-bd0f-a381495d5d37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import csv\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ba75943-883e-4ec8-af1d-2277dd65e00c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64eeb333-d5c6-415a-96e6-b42ed75890b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "data1 = dask.dataframe.read_csv(files[0])\n",
-    "data2 = dask.dataframe.read_csv(files[1])\n",
-    "data3 = dask.dataframe.read_csv(files[2])\n",
-    "data4 = dask.dataframe.read_csv(files[3])\n",
-    "\n",
-    "df1=data1.compute()\n",
-    "df2=data2.compute()\n",
-    "df3=data3.compute()\n",
-    "df4=data4.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b71c5869-0882-4f6a-b2ea-5ac2d3142e44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff02b5ea-8d12-4c7b-9fb8-191e3f806a9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d75f1b65-7346-4d73-8fd6-4ca0cd690941",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "logging.basicConfig(level=logging.INFO, file='d://sample.log')\n",
-    "\n",
-    "def hypotenuse(a, b):\n",
-    "    \"\"\"Compute the hypotenuse\"\"\"\n",
-    "    return (a**2 + b**2)**0.5\n",
-    "\n",
-    "kwargs = {'a':3, 'b':4, 'c':hypotenuse(3, 4)}\n",
-    "\n",
-    "logging.debug(\"a = {a}, b = {b}\".format(**kwargs))\n",
-    "logging.info(\"Hypotenuse of {a}, {b} is {c}\".format(**kwargs))\n",
-    "logging.warning(\"a={a} and b={b} are equal\".format(**kwargs))\n",
-    "logging.error(\"a={a} and b={b} cannot be negative\".format(**kwargs))\n",
-    "logging.critical(\"Hypotenuse of {a}, {b} is {c}\".format(**kwargs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c015f31-2fcc-49e1-bac4-5a8f4c6983f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import parser\n",
-    "print(\"Program to demonstrate parser module in Python\")\n",
-    "print(\"\\n\")\n",
-    "exp = \"5 + 8\"\n",
-    "print(\"The given expression for parsing is as follows:\")\n",
-    "print(exp)\n",
-    "print(\"\\n\")\n",
-    "print(\"Parsing of given expression results as: \")\n",
-    "st = parser.expr(exp)\n",
-    "print(st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec92a994-8e8d-4500-9f61-34c3ff1e2e1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "nested_dict  = pickle.load( open(\"file.pkl\", \"rb\") )\n",
-    "d = [d1, d3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1afc84f5-2602-4fc7-9333-908c5eca0e79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nested_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "215ee332-8726-476a-8fe4-cfa192000ad5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98dc2fff-21ad-4c15-a719-4a4f9295e433",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d[0]"
-   ]
   },
   {
    "cell_type": "code",
