error handling for invalid house numbers

--- a/01_get_started.ipynb
+++ b/01_get_started.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "KETTLE = refit.get_appliance_data('Kettle', houses=[15])"
+    "KETTLE = refit.get_appliance_data('Kettle', houses=[1, 2, 14, 15])"
    ]
   },
   {
@@ -97,50 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOUSE15['kettle ']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3409a1de-fb7e-42c1-bdbc-1da32fe501b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Dim = \"This is a Long String\"\n",
-    "Dim splitted = input.Split(\" \"c)\n",
-    "\n",
-    "Dim result = New List(Of String)()\n",
-    "For x As Integer = 0 To splitted.Length - 1 Step 2\n",
-    "    result.Add(String.Join(\" \", splitted.Skip(x).Take(2)))\n",
-    "Next"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d63f276f-9738-47d2-aebb-699dd4d2c507",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "inputstr = \"This is a Long String\"\n",
-    "words = inputstr.split()\n",
-    "secondwords = iter(words)\n",
-    "next(secondwords)\n",
-    "\n",
-    "output = [' '.join((first, second)) \n",
-    "          for first, second in zip(words, secondwords)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaefc21d-4b02-45cc-be9e-accef4c69fee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output"
+    "HOUSE15"
    ]
   },
   {
